--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_sign_in: ^6.2.1
   google_generative_ai: ^0.4.7
+  intl: ^0.20.0
+  sensors_plus: ^5.0.1
+  geolocator: ^12.0.0
+  url_launcher: ^6.2.6
+  permission_handler: ^11.3.1
 
   # 🔥 Firebase (MUST be here)
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
   cloud_firestore: ^4.15.0
+  google_maps_flutter: ^2.14.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -40,5 +47,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/google.jpg
-    - assets/icons/app_logo.jpg
+    - assets/google.jpg
+    - assets/app_logo.jpg
